--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="card bg-red">
         <h2>YouTube курсы</h2>
-        <h5>VS code</h5>
+        <h3>VS code</h3>
         <ul class="link-list">
           <li>
             <a
@@ -69,7 +69,7 @@
             >
           </li>
         </ul>
-        <h5>HTML & CSS</h5>
+        <h3>HTML & CSS</h3>
         <ul class="link-list">
           <li>
             <a
@@ -84,6 +84,39 @@
               target="_blank"
               >CSS для Начинающих - Практический Курс [2021]</a
             >
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=JO8DvVZbxDw"
+              target="_blank"
+              >Preprocessors. SASS</a
+            >
+          </li>
+        </ul>
+        <h3>Docker</h3>
+        <ul class="link-list">
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=Sa7uOGczoHc"
+              target="_blank"
+              >Просто о контенеризации. Docker</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=n9uCgUzfeRQ&t=1871s"
+              target="_blank"
+            >
+              Docker для Начинающих - Полный Курс [2021]
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=QF4ZF857m44"
+              target="_blank"
+            >
+              Основы Docker. Большой практический выпуск
+            </a>
           </li>
         </ul>
       </div>
@@ -112,9 +145,9 @@
         </form>
       </div>
 
-        <div class="position">
-      <div class="box"></div>
-    </div>
+      <div class="position">
+        <div class="box"></div>
+      </div>
     </div>
   </body>
 </html>
