--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li>
             <a
               href="https://www.youtube.com/watch?v=nxCLXMBl4e4&ab_channel=%D0%A4%D1%80%D0%B8%D0%BB%D0%B0%D0%BD%D1%81%D0%B5%D1%80%D0%BF%D0%BE%D0%B6%D0%B8%D0%B7%D0%BD%D0%B8-IT%D0%B8%D1%84%D1%80%D0%B8%D0%BB%D0%B0%D0%BD%D1%81"
-              target="blank"
+              target="_blank"
               >VS Code настройка установка плагины</a
             >
           </li>
@@ -67,6 +67,26 @@
               target="_blank"
               >VS Code Полный Курс для JavaScript разработчиков</a
             >
+          </li>
+        </ul>
+        <h3>WebStorm</h3>
+        <ul class="link-list">
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=G3O7gJR5eYE&ab_channel=Front-endSciencec%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B5%D0%BC%D0%9F%D1%83%D0%B7%D0%B0%D0%BD%D0%BA%D0%BE%D0%B2%D1%8B%D0%BC"
+              target="_blank"
+            >
+              Как ускорить процесс разработки в WebStorm | Андрей Старовойт Team
+              Lead команды WebStorm
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=WlBrhM1_t5k&ab_channel=%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BB%D0%B5%D0%BD%D0%9C%D0%B8%D0%BD%D0%B8%D0%BD"
+              target="_blank"
+            >
+              WebStorm – Полный Курс [2021]
+            </a>
           </li>
         </ul>
         <h3>HTML & CSS</h3>
