--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Моё резюме</title>
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
+    <header class="container">
       <div class="info">
         <img src="avatar.jpg" alt="фото профиля" class="avatar" />
         <div class="info-text">
-          <h1>Ермаков Игорь</h1>
+          <h1>Игорь Ермаков</h1>
           <p><strong>JavaScript-разрабочик</strong> и не только...</p>
-          <p>
-            Я люблю путешествовать на машине, кататься на велосипеде и лыжах
-          </p>
+          <p>Я люблю путешествовать на машине, кататься на велосипеде и лыжах</p>
 
           <h4>Мои социальные сети</h4>
           <a href="https://github.com/GarriGarrison" target="_blank">GitHub</a>
@@ -25,133 +24,133 @@
         </div>
       </div>
 
-      <div class="card bg-yellow">
-        <h2>Мои хобби</h2>
+      <main>
+
+      <div class="card hard-skills">
+        <h2>Ключевые навыки</h2>
+        <div class="list-skills">
+          <span>JavaScript</span>
+          <span>TypeScript</span>
+          <span>React</span>
+          <span>Redux</span>
+          <span>Redux-Thunk</span>
+          <span>NodeJS</span>
+          <span>PosgreSQL</span>
+          <span>Sequelize</span>
+          <span>REST API</span>
+          <span>HTML5</span>
+          <span>CSS3</span>
+          <span>SAS</span>
+          <span>GIT</span>
+        </div>
+      </div>
+
+      <div class="card development">
+        <h2>Опыт разработки</h2>
         <ol class="list">
-          <li>Велопрогулки</li>
-          <li>Лыжные прогулки (классика)</li>
-          <li>Книги: научная фантастика и приключения</li>
+          <li>
+            <h3>ООО «НПО ПКРВ»</h3>
+              <div class="website">сайт: <a href="https://npo-pkrv.ru">npo-pkrv.ru</a></div>
+              <ul class="list">
+                <li>Верстка сайтов и корпоративных порталов на HTML и CSS</li>
+                <li>
+                  Разработка клиентской части (frontend) программных продуктов компании с использованием технологий
+                  React, Redux, TypeScript
+                </li>
+              </ul>
+          </li>
+          <li>
+            <h3>Elbrus Coding Bootcamp</h3>
+              <div class="website">сайт: <a href="https://elbrusboot.camp">npo-pkrv.ru</a></div>
+              <ul class="list">
+                <li>Выполнение небольших индивидуальных проектов, которые включали в себя полный цикл разработки web-приложений</li>
+                <li>Выполнение командных проектов, в том числе от различных заказчиков</li>
+              </ul>
+          </li>
         </ol>
       </div>
 
-      <div class="card bg-red">
-        <h2>YouTube курсы</h2>
-        <h3>VS code</h3>
-        <ul class="link-list">
+      <div class="card projects">
+        <h2>Проекты, которые можно посмотреть</h2>
+        <ol class="list">
           <li>
-            <a
-              href="https://www.youtube.com/watch?v=nxCLXMBl4e4&ab_channel=%D0%A4%D1%80%D0%B8%D0%BB%D0%B0%D0%BD%D1%81%D0%B5%D1%80%D0%BF%D0%BE%D0%B6%D0%B8%D0%B7%D0%BD%D0%B8-IT%D0%B8%D1%84%D1%80%D0%B8%D0%BB%D0%B0%D0%BD%D1%81"
-              target="_blank"
-              >VS Code настройка установка плагины</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=QeUp3CahkQw&ab_channel=%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BB%D0%B5%D0%BD%D0%9C%D0%B8%D0%BD%D0%B8%D0%BD"
-              target="_blank"
-              >VS Code Полный Курс для JavaScript разработчиков</a
-            >
-          </li>
-        </ul>
-        <h3>WebStorm</h3>
-        <ul class="link-list">
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=G3O7gJR5eYE&ab_channel=Front-endSciencec%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B5%D0%BC%D0%9F%D1%83%D0%B7%D0%B0%D0%BD%D0%BA%D0%BE%D0%B2%D1%8B%D0%BC"
-              target="_blank"
-            >
-              Как ускорить процесс разработки в WebStorm | Андрей Старовойт Team
-              Lead команды WebStorm
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=WlBrhM1_t5k&ab_channel=%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BB%D0%B5%D0%BD%D0%9C%D0%B8%D0%BD%D0%B8%D0%BD"
-              target="_blank"
-            >
-              WebStorm – Полный Курс [2021]
-            </a>
-          </li>
-        </ul>
-        <h3>HTML & CSS</h3>
-        <ul class="link-list">
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=DOEtVdkKwcU&ab_channel=%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BB%D0%B5%D0%BD%D0%9C%D0%B8%D0%BD%D0%B8%D0%BD"
-              target="_blank"
-              >HTML для Начинающих - Практический Курс [2021]</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=SpCUuyZZTp8&ab_channel=%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BB%D0%B5%D0%BD%D0%9C%D0%B8%D0%BD%D0%B8%D0%BD"
-              target="_blank"
-              >CSS для Начинающих - Практический Курс [2021]</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=JO8DvVZbxDw"
-              target="_blank"
-              >Preprocessors. SASS</a
-            >
-          </li>
-        </ul>
-        <h3>Docker</h3>
-        <ul class="link-list">
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=Sa7uOGczoHc"
-              target="_blank"
-              >Просто о контенеризации. Docker</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=n9uCgUzfeRQ&t=1871s"
-              target="_blank"
-            >
-              Docker для Начинающих - Полный Курс [2021]
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/watch?v=QF4ZF857m44"
-              target="_blank"
-            >
-              Основы Docker. Большой практический выпуск
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="contact">
-        <h2>Связаться со мной</h2>
-        <form action="/">
-          <div class="row">
-            <div class="form-group">
-              <label for="name">Ваше имя:</label>
-              <input type="text" id="name" placeholder="Введите ваше имя..." />
+            <a href="https://github.com/GarriGarrison/SimPet" target="_blank"><h3>SimPet</h3></a>
+            <div class="prj_about">
+              Проект ориентирован на решение проблемы ухода за домашними питомцами в стиле игры Sims. Проект включает
+              напоминая о потребностях питомца, а также мини-игру
             </div>
-
-            <div class="form-group">
-              <label for="email">Ваш email:</label>
-              <input type="text" id="email" placeholder="Введите email..." />
+          </li>
+          <li>
+            <a href="https://github.com/GarriGarrison/RedMarker" target="_blank"><h3>RedMarker</h3></a>
+            <div class="prj_about">
+              Проект направлен на проверку обязательной информации, которая должна находиться на других сайтах
             </div>
-          </div>
-
-          <div class="form-group">
-            <label for="text">Ваше сообщение:</label>
-            <textarea id="text" cols="30" rows="10"></textarea>
-          </div>
-
-          <input class="btn" type="submit" value="Связаться!" />
-        </form>
+          </li>
+          <li>
+            <a href="https://github.com/GarriGarrison/QuizConsole" target="_blank"><h3>QuizConsole</h3></a>
+            <div class="prj_about">
+              Консольная игра-викторина. Реализована на концепции MVC. Вопросы по темам считываются из заранее
+              заготовленных файлов. Класс контроллер отвечает за логику игры (запуск игры, построение меню, получение
+              статистики), класс module отвечает за чтение файлов, сбор статистики в процессе игр, класс view отвечает
+              за драйвер взаимодействия с пользователем (ввод ответа от пользователя, ответа от пользователя, показ
+              статистики игры)
+            </div>
+          </li>
+        </ol>
       </div>
 
-      <div class="position">
-        <div class="box"></div>
+      <div class="card experience">
+        <h2>Ранняя карьера</h2>
+          <h3>АО «ФЦНИВТ «СНПО «Элерон»</h3>
+          <div class="website">cайт: <a href="https://www.eleron.ru">www.eleron.ru</a>
+            <p>пройден долгий путь от техника до главного специалиста</p>
+            приобретённые навыки:
+            <ul class="list">
+              <li>Разработка РКД на разрабатываемые устройства</li>
+              <li>Разработка электрических схем и топологий плат</li>
+              <li>Написание программ для микроконтроллеров AVR, MSP430, STM3</li>
+              <li>Написание GUI и web-интерфейсов для взаимоействия с устройствами</li>
+            </ul> 
+          <div>Ключевые технологии:
+            <ul class="list">
+              <li>.Net Framework</li>
+              <li>Lazarus</li>
+              <li>P-cad</li>
+              <li>AutoCad</li>
+              <li>IAR</li>
+              <li>Cube MX</li>
+              <li>MatLab</li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
+
+      <div class="card  learn">
+        <h2>Образование</h2>
+          <ul class="list">
+            <li>
+              <h3>Национальный исследовательский технологический университет "МИСиС"</h3>
+              Факультет Полупроводниковой электроники и физики полупроводников, Микроэлектроника и твердотельная электроника
+            </li>
+            <li><h3>Московский технический колледж</h3>
+              Факультет Радиоаппаратостроение</li>
+          </ul>
+      </div>
+
+      <div class="card hobby">
+        <h2>Мои увлечения</h2>
+        <ol class="list">
+          <li>🚴 ⛷️ Люблю выбираться на природу и кататься на велосипедах или лыжах, в зависимости от сезона 🙂</li>
+          <li>
+            📚 В свободное время люблю читать научную фантастику (одна из любимых книг "Таинственный остров" Жюля Верна)
+          </li>
+        </ol>
+      </div>
+
+      </main>
+
+      <footer>
+         ©Garrison, 2022
+      </footer>
   </body>
 </html>
