--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
       <div class="card projects">
         <h2>Проекты, которые можно посмотреть</h2>
         <ol class="list">
+           <li>
+            <a href="https://github.com/GarriGarrison/color-selection-randomazer" target="_blank"><h3>ColorSelectionRandomazer</h3></a>
+            <div class="prj_about">
+              Небольшой порект с изпользованием библиотеки React для подбора пяти случайных цветов. Обмениваться цветовыми палитрами можно
+              через url-адрес
+            </div>
+          </li>
           <li>
             <a href="https://github.com/GarriGarrison/SimPet" target="_blank"><h3>SimPet</h3></a>
             <div class="prj_about">
