--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
           <a href="https://t.me/IgorErmakovv" target="_blank">Telegram</a>
         </div>
       </div>
+    </header>
 
-      <main>
+    <main>
 
       <div class="card hard-skills">
         <h2>Ключевые навыки</h2>
@@ -154,10 +155,10 @@
         </ol>
       </div>
 
-      </main>
+    </main>
 
-      <footer>
+    <footer>
          ©Garrison, 2022
-      </footer>
+    </footer>
   </body>
 </html>
