--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         </div>
       </div>
     </header>
-
-    <main>
-
+    
+    <main class="container">
       <div class="card hard-skills">
         <h2>Ключевые навыки</h2>
         <div class="list-skills">
@@ -154,7 +153,6 @@
           </li>
         </ol>
       </div>
-
     </main>
 
     <footer>
